# rlibxml2

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml  记录.md
.claude/: settings.local.json
.github/workflows/: ci.yml
libxml2-sys/: Cargo.toml  build.rs  wrapper.h
libxml2-sys/src/: lib.rs  safe_wrapper.rs
src/: document.rs  error.rs  lib.rs  node.rs  node_type.rs  options.rs  xpath.rs
tests/: test_attributes.rs  test_basic.rs  test_edge_cases.rs  test_errors.rs  test_integration.rs  test_node.rs  test_options.rs  test_safety.rs  test_thread_safety.rs  test_threading.rs  test_traversal.rs  test_xpath.rs
xml-scraper/: Cargo.toml
xml-scraper/src/: document.rs  error.rs  lib.rs  node.rs  options.rs  xpath.rs
xml-scraper/tests/: test_attributes.rs  test_basic.rs  test_edge_cases.rs  test_errors.rs  test_integration.rs  test_node.rs  test_options.rs  test_safety.rs  test_thread_safety.rs  test_traversal.rs  test_xpath.rs
