[package]
name = "libxml2-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Raw FFI bindings to libxml2 for web scraping"
links = "xml2"

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
bindgen = "0.72"

[features]
default = []
# 用于静态链接
static = []
